--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
       discovery:
         enabled: true
         service-id: config
-      profile: dev
+      profile: test
 eureka:
   client:
     service-url:
