--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -7,6 +7,11 @@ spring:
         enabled: true
         service-id: config
       profile: test
+    stream:
+      bindings:
+        myMessage:
+          group: order
+          content-type: application/json
 eureka:
   client:
     service-url:
