10-6 - Use feign hystrix

--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -23,9 +23,13 @@ hystrix:
       execution:
         isolation:
           thread:
-            timeoutInMilliseconds: 1000
+            timeoutInMilliseconds: 5000
     getProductInfoList:
       execution:
         isolation:
           thread:
             timeoutInMilliseconds: 3000
+
+feign:
+  hystrix:
+    enabled: true
