--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -6,12 +6,17 @@ spring:
       discovery:
         enabled: true
         service-id: config
-      profile: test
+      profile: dev
     stream:
       bindings:
         myMessage:
           group: order
           content-type: application/json
+  zipkin:
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      percentage: 1
 eureka:
   client:
     service-url:
@@ -23,7 +28,7 @@ hystrix:
       execution:
         isolation:
           thread:
-            timeoutInMilliseconds: 5000
+            timeoutInMilliseconds: 6000
     getProductInfoList:
       execution:
         isolation:
@@ -36,3 +41,8 @@ feign:
 
 management:
   context-path: /
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.bus: debug
+
