--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -9,7 +9,8 @@ spring:
           username: 494312263@qq.com
           password: xvD45eRR
           basedir: /Users/xiangxinli/SpringCloud_Sell/config/basedir
+          force-pull: true
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
