--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
       discovery:
         enabled: true
         service-id: config
-      profile: dev
+      profile: test
     stream:
       bindings:
         myMessage:
@@ -14,30 +14,16 @@ spring:
           content-type: application/json
   zipkin:
     base-url: http://localhost:9411/
+    sender:
+      type: web
   sleuth:
     sampler:
-      percentage: 1
+      probability: 1
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
 
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 6000
-    getProductInfoList:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 3000
-
-feign:
-  hystrix:
-    enabled: true
 
 management:
   context-path: /
