--- a/product/server/src/main/resources/bootstrap.yml
+++ b/product/server/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
 
 logging:
   level:
